--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,16 +1,17 @@
+
+HttpPort = 8000
 appname = api_project
-httpport = 8080
 runmode = dev
 autorender = false
 copyrequestbody = true
 EnableDocs = true
 
-mysql_config = "root:donghao654321@/go_platform?charset=utf8"
+#mysql_config = "root:@/go_platform?charset=utf8"
+#StaticDir = /Users/yinxing/godir/go/src/Gin_API_Framework/static
+#ViewsPath = /Users/yinxing/godir/go/src/Gin_API_Framework/web-controllers/templates
 
-StaticDir = /Users/yinxing/godir/go/src/Gin_API_Framework/static
-ViewsPath = /Users/yinxing/godir/go/src/Gin_API_Framework/web-controllers/templates
-EnableAdmin = true
-AdminAddr = 127.0.0.1
-AdminPort = 8088
+#EnableAdmin = true
+#AdminAddr = 127.0.0.1
+#AdminPort = 8088
 
 
